[gd_scene load_steps=2 format=3 uid="uid://bfpo5mgjav6ad"]

[ext_resource type="Script" path="res://main.gd" id="1_u862a"]

[node name="Main" type="Node"]
script = ExtResource("1_u862a")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376471, 0, 0, 1)

[node name="Control" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2

[node name="Control" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/Control"]
layout_mode = 2
text = "Ratio divorce / mariage du pays"

[node name="SpinBox" type="SpinBox" parent="Control/VBoxContainer/Control"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Person1" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DataVBox" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Homme"
horizontal_alignment = 1

[node name="BirthDate" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/BirthDate"]
layout_mode = 2
text = "Date de naissance (JJ/MM/AAAA):"

[node name="Input" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/BirthDate"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/BirthDate"]
layout_mode = 2
value = 100.0
rounded = true

[node name="Income" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/Income"]
layout_mode = 2
text = "Revenu mensuel > à (peso):"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/Income"]
layout_mode = 2
allow_greater = true

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/Income"]
layout_mode = 2
value = 100.0
rounded = true

[node name="MarriedYet" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
layout_mode = 2
text = "Déjà marié:"

[node name="AgeAtMarriage" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/AgeAtMarriage"]
layout_mode = 2
text = "Âge lors du mariage:"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/AgeAtMarriage"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/AgeAtMarriage"]
layout_mode = 2
value = 100.0
rounded = true

[node name="MarriageDuration" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/MarriageDuration"]
layout_mode = 2
text = "Durée du mariage"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/MarriageDuration"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/MarriageDuration"]
layout_mode = 2
value = 100.0
rounded = true

[node name="ChildrenInMarriage" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/ChildrenInMarriage"]
layout_mode = 2
text = "Enfants pendant le mariage"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/ChildrenInMarriage"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/ChildrenInMarriage"]
layout_mode = 2
value = 100.0
rounded = true

[node name="Result" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Result"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResultTitle" type="Label" parent="Control/VBoxContainer/HBoxContainer/Result/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Votre probabilité de divorce est actuellement de:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ResultValue" type="Label" parent="Control/VBoxContainer/HBoxContainer/Result/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "divorce %"
horizontal_alignment = 1

[node name="ComputeButton" type="Button" parent="Control/VBoxContainer/HBoxContainer/Result/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "VA-T-ON DIVORCER ?"

[node name="Person2" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DataVBox" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Femme"
horizontal_alignment = 1

[node name="BirthDate" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/BirthDate"]
layout_mode = 2
text = "Date de naissance (JJ/MM/AAAA):"

[node name="Input" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/BirthDate"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/BirthDate"]
visible = false
layout_mode = 2
value = 100.0

[node name="Income" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/Income"]
layout_mode = 2
text = "Revenu mensuel > à (peso):"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/Income"]
layout_mode = 2
allow_greater = true

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/Income"]
visible = false
layout_mode = 2
value = 100.0

[node name="MarriedYet" type="CheckButton" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
layout_mode = 2
text = "Déjà marié:"

[node name="AgeAtMarriage" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/AgeAtMarriage"]
layout_mode = 2
text = "Âge lors du mariage"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/AgeAtMarriage"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/AgeAtMarriage"]
visible = false
layout_mode = 2
value = 100.0

[node name="MarriageDuration" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/MarriageDuration"]
layout_mode = 2
text = "Durée du mariage"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/MarriageDuration"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/MarriageDuration"]
visible = false
layout_mode = 2
value = 100.0

[node name="ChildrenInMarriage" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/ChildrenInMarriage"]
layout_mode = 2
text = "Enfants pendant le mariage"

[node name="Input" type="SpinBox" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/ChildrenInMarriage"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/ChildrenInMarriage"]
visible = false
layout_mode = 2
value = 100.0

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/Person1/DataVBox/MarriedYet" to="." method="_on_man_married_yet_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/Result/VBox/ComputeButton" to="." method="_on_compute_button_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/Person2/DataVBox/MarriedYet" to="." method="_on_woman_married_yet_toggled"]
